--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "leaflet": "^1.8.0",
     "leaflet-draw": "^1.0.4",
     "leaflet.heat": "^0.2.0",
+    "mgrs": "^2.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.13.1"
