--- a/frontend/package.json
+++ b/frontend/package.json
@@ -84,8 +84,8 @@
   "overrides": {
     "glob-parent": "6.0.2",
     "@angular/core": "^16.1.2",
-    "axios": "1.6.5",
-    "tough-cookie": "4.1.3",
-    "xml2js": "0.6.2"
+    "axios": "^1.6.5",
+    "tough-cookie": "^4.1.3",
+    "xml2js": "^0.6.2"
   }
 }
